# web_scraping

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
models/: __init__.py  _scraper_metaclass.py  bina_az_models.py
scrapers/: __init__.py  _common.py  _helpers.py
scrapers/abc/: __init__.py  _scapers_abc.py
scrapers/bina_az_scraper/: __init__.py  scraper.py
tests/: base_test.py  test_bina_az_scraper.py
