[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["rg-gt-1881 <rustam.garayev_contractor@gaintheory.com>"]
readme = "README.md"
packages = [{include = "web_scraping"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pre-commit = "^3.5.0"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
